# treasury-label-compliance

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  pyproject.toml
backend/app/: config.py  main.py
docs/: DEPLOYMENT_CHECKLIST.md  FAQ.md  README.md  dev-environment-notes.md  latency-benchmarks.md  prompt-audit-LBL-AUD-0612.md  requirements-analysis.md
docs/adr/: 001-vision-model-selection.md  002-litellm-library-vs-proxy.md  003-dual-mode-input.md  004-backend-framework.md  005-frontend-framework.md  006-deployment-target.md  007-batch-processing-design.md  008-image-preprocessing.md  009-two-layer-architecture.md  010-audit-logging.md  011-extraction-schema.md  012-multi-panel-submission.md  013-batch-processing-poc.md  README.md
docs/rules/: README.md  beer-malt.md  distilled-spirits.md  government-warning-statement.md  wine.md
docs/ui-screenshots/: railway-batch-results.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
scripts/: benchmark-latency.sh  download-cola-labels.py  download-test-labels.py  generate-mode-a-labels.py  generate-synthetic-labels.py  smoke-test.sh  stitch-labels.py
test-labels/: README.md  mode-a-smoke-batch.sh
test-labels/applications/: angry-orchard-iceman.json  canyon-ridge-bourbon-synth-mode-a-R-APP-01-02.json  canyon-ridge-bourbon-synth-mode-a-R-APP-04.json  canyon-ridge-bourbon-synth-mode-a-compliant.json  sierra-nevada-pale-ale.json  (+7 more)
tests/: test_api.py  test_application_checker.py  test_compliance_checker.py  test_extractor.py
(+30 files in other folders)
