[project]
name = "treasury-label-compliance"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",   # FastAPI TestClient dependency
]

[tool.pytest.ini_options]
pythonpath = ["."]
